# farmsubsidy-store

./: .bumpversion.cfg  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  generate_logins.ipynb  import.py  setup.cfg  setup.py
.github/workflows/: build.yml
examples/: play-with-the-data.ipynb
farmsubsidy_import/: clean.py  cli.py  db.py  exceptions.py  logging.py  settings.py  util.py
farmsubsidy_import/ftm/: mapping.yml
farmsubsidy_store/: aggregations.py  api.py  clean.py  cli.py  currency_conversion.py  currency_rates.json  db.py  drivers.py  enrich.py  enums.py  exceptions.py  logging.py  model.py  query.py  schemes.csv  schemes.py  search.py  settings.py  util.py  views.py
farmsubsidy_store/api/: app.py  auth.py  cache.py  params.py  util.py  views.py
farmsubsidy_store/ftm/: README.md  mapping.yml
tests/: test_clean.py  test_clickhouse_aggregations.py  test_clickhouse_model.py  test_clickhouse_search.py  test_drivers.py  test_import.py  test_query.py  util.py
