[metadata]
name = farmsubsidy-store
version = file: VERSION
description = Importer, storage and api for farmsubsidy data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Simon Wörpel
author_email = simon.woerpel@medienrevolte.de
url = https://github.com/okfde/farmsubsidy-store
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
include_package_data = True
install_requires:
    banal
    cachelib
    Click
    clickhouse-driver[numpy]
    countrynames
    dataset
    duckdb
    fastapi
    fingerprints
    followthemoney
    furl
    matplotlib
    pandas
    passlib[bcrypt]
    pycountry
    pydantic
    pyicu
    python-jose[cryptography]
    python-multipart
    redis
    hiredis
    shortuuid
    structlog

[options.extras_require]
geo =
    ftm-geocode
    postal

[options.entry_points]
console_scripts =
    fscli = farmsubsidy_store.cli:cli

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501


